--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "~1.18.2",
     "cors": "^2.8.4",
     "express": "~4.15.5",
+    "mongoose": "^4.13.9",
     "morgan": "~1.9.0"
   },
   "devDependencies": {
