--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
   },
   "dependencies": {
     "body-parser": "~1.18.2",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
-    "express": "~4.15.5",
+    "express": "^4.16.2",
+    "express-graphql": "^0.6.11",
+    "graphql": "^0.12.3",
+    "graphql-tester": "^0.0.5",
     "mongoose": "^4.13.9",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "serve-favicon": "^2.4.5"
   },
   "devDependencies": {
     "jest": "^22.0.5",
