--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "test": "jest",
     "dev": "nodemon ./bin/www",
     "start": "node ./bin/www"
   },
@@ -10,6 +11,9 @@
     "body-parser": "~1.18.2",
     "cors": "^2.8.4",
     "express": "~4.15.5",
+    "express-graphql": "^0.6.11",
+    "graphql": "^0.12.3",
+    "graphql-tester": "^0.0.5",
     "mongoose": "^4.13.9",
     "morgan": "~1.9.0"
   },
