--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "body-parser": "~1.18.2",
     "cors": "^2.8.4",
     "express": "~4.15.5",
+    "express-graphql": "^0.6.11",
+    "graphql": "^0.12.3",
     "mongoose": "^4.13.9",
     "morgan": "~1.9.0"
   },
