--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "test": "jest",
+    "test": "jest --coverage",
     "dev": "nodemon ./bin/www",
     "start": "node ./bin/www"
   },
@@ -15,6 +15,7 @@
     "express-graphql": "^0.6.11",
     "graphql": "^0.12.3",
     "graphql-tester": "^0.0.5",
+    "istanbul": "^0.4.5",
     "mongoose": "^4.13.9",
     "morgan": "~1.9.0",
     "parse-rss": "^1.0.3",
